[package]
name = "conduktor-kafka-proxy"
version = "0.1.0"
authors = ["support@conduktor.io"]
license = "MIT"
description = "A modern, simple TCP tunnel in Rust that exposes local ports to a remote server, bypassing standard NAT connection firewalls."
repository = "https://github.com/ekzhang/bore"
documentation = "https://docs.rs/bore-cli"
keywords = ["kafka", "cli", "proxy"]
categories = ["network-programming", "web-programming", "command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "conduktor-kafka-proxy"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
dashmap = "5.4.0"
futures-util = { version = "0.3.28", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
kafka-protocol = "0.6.0"
bytes= "1.4.0"
indexmap = "1.9.3"
futures = "0.3.28"

[dev-dependencies]
lazy_static = "1.4.0"
rstest = "0.17.0"
tokio = { version = "1.27.0", features = ["sync"] }
